# cpp_algorithms

./: .travis.yml  CMakeLists.txt
example/: CMakeLists.txt
include/cpp_algorithms/: project_name.hpp  test_header.hpp
include/cpp_algorithms/component/: component_header.hpp
test/: CMakeLists.txt  test_b.cpp
test/component/: test_a.cpp
